--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,10 @@
 <package format="2">
-  <name>livelybot_urdf</name>
+  <name>model_H</name>
   <version>1.0.0</version>
   <description>
-    <p>URDF Description package for livelybot_urdf</p>
+    <p>URDF Description package for model_H</p>
     <p>This package contains configuration data, 3D models and launch files
-for livelybot_urdf robot</p>
+for model_H robot</p>
   </description>
   <author>TODO</author>
   <maintainer email="TODO@email.com" />
